--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="style.css">
 </head>
 <body style="align-items: center;">
-        <div id="wheelOfFortune">
+        <div id="wheelOfFortune" style="margin-top: 10%;">
                 <canvas id="wheel" width="600" height="600"></canvas>
                 <div id="spin">SPIN asd asd asd as dasd as dasd asd asd as d</div>
         </div>
