--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Türk Edebiyatın Şairleri</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="style.css">
 </head>
 <body style="align-items: center;">
-        <div id="wheelOfFortune" style="margin-top: 10%;">
+        <div id="wheelOfFortune" style="margin-top: 5%; margin-left: 25%;">
                 <canvas id="wheel" width="600" height="600"></canvas>
                 <div id="spin">SPIN asd asd asd as dasd as dasd asd asd as d</div>
         </div>
